--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webscrapper</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"
+    />
   </head>
   <body>
-    <h1>Hello to you! my name is {{name}}</h1>
+    <main class="container">
+      <h1>Job Scrapper</h1>
+      <h4>What job do you want?</h4>
+      <form action="/search">
+        <input type="text" name="keyword" placeholder="Write keyword please" />
+        <button>{{name}}</button>
+      </form>
+    </main>
   </body>
 </html>
