--- a/templates/search.html
+++ b/templates/search.html
@@ -16,7 +16,10 @@
   </head>
   <body>
     <main class="container">
-      <h1 class="jobs-box">Search Results for [{{keyword}}] :</h1>
+      <hgroup>
+        <h1 class="jobs-box">Search Results for [{{keyword}}] :</h1>
+        <a target="_blank" href="/export?keyword={{keyword}}">Export to file</a>
+      </hgroup>
       <figure>
         <table>
           <thead>
